SUBDIRS = src

ACLOCAL_AMFLAGS = -I build/m4

include_HEADERS = \
    inc/db_client.h \
    inc/db_column.h \
    inc/db_easy_mesh.h \
    inc/dm_ap_mld.h \
    inc/dm_bss.h \
    inc/dm_bss_list.h \
    inc/dm_bsta_mld.h \
    inc/dm_cac_comp.h \
    inc/dm_device.h \
    inc/dm_device_list.h \
    inc/dm_dpp.h \
    inc/dm_easy_mesh_agent.h \
    inc/dm_easy_mesh_ctrl.h \
    inc/dm_easy_mesh.h \
    inc/dm_easy_mesh_list.h \
    inc/dm_ieee_1905_security.h \
    inc/dm_ieee_1905_security_list.h \
    inc/dm_network.h \
    inc/dm_network_list.h \
    inc/dm_network_ssid.h \
    inc/dm_network_ssid_list.h \
    inc/dm_op_class.h \
    inc/dm_op_class_list.h \
    inc/dm_radio_cap.h \
    inc/dm_radio_cap_list.h \
    inc/dm_radio.h \
    inc/dm_radio_list.h \
    inc/dm_ssid_2_vid_map.h \
    inc/dm_sta.h \
    inc/dm_sta_list.h \
    inc/dm_tid_to_link.h \
    inc/ec_base.h \
    inc/ec_session.h \
    inc/em_agent.h \
    inc/em_base.h \
    inc/em_capability.h \
    inc/em_channel.h \
    inc/em_cli.h \
    inc/em_cmd_agent.h \
    inc/em_cmd_ap_cap.h \
    inc/em_cmd_cfg_renew.h \
    inc/em_cmd_channel_pref_query.h \
    inc/em_cmd_client_cap.h \
    inc/em_cmd_cli.h \
    inc/em_cmd_ctrl.h \
    inc/em_cmd_dev_init.h \
    inc/em_cmd_dev_test.h \
    inc/em_cmd_em_config.h \
    inc/em_cmd_exec.h \
    inc/em_cmd_get_channel.h \
    inc/em_cmd_get_device.h \
    inc/em_cmd_get_network.h \
    inc/em_cmd_get_radio.h \
    inc/em_cmd_get_ssid.h \
    inc/em_cmd.h \
    inc/em_cmd_onewifi_cb.h \
    inc/em_cmd_op_channel_report.h \
    inc/em_cmd_remove_device.h \
    inc/em_cmd_reset.h \
    inc/em_cmd_set_channel.h \
    inc/em_cmd_set_ssid.h \
    inc/em_cmd_sta_assoc.h \
    inc/em_cmd_sta_disassoc.h \
    inc/em_cmd_sta_link_metrics.h \
    inc/em_cmd_sta_list.h \
    inc/em_cmd_start_dpp.h \
    inc/em_cmd_sta_steer.h \
    inc/em_cmd_topo_sync.h \
    inc/em_configuration.h \
    inc/em_crypto.h \
    inc/em_ctrl.h \
    inc/em_discovery.h \
    inc/em.h \
    inc/em_metrics.h \
    inc/em_mgr.h \
    inc/em_msg.h \
    inc/em_onewifi.h \
    inc/em_orch_agent.h \
    inc/em_orch_ctrl.h \
    inc/em_orch.h \
    inc/em_provisioning.h \
    inc/em_sm.h \
    inc/em_steering.h \
    inc/em_test_validation.h \
    inc/ieee80211.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = unified-wifi-mesh.pc

EXTRA_DIST = \
    LICENSE \
    NOTICE \
    README.md \
    CONTRIBUTING.md
